--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!doctype html>
-<html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <title>Sebastian A. Castro R.</title>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <div class="page">
+            <div class="header">
+                <div class="container">
+                    <p class="title">Sebastian A. Castro R</p>
+                </div>
+            </div>
+            <div class="translations-content-container">
+                <div class="container">
+                    <div
+                        class="tab-content translations-content-item en visible"
+                        id="en"
+                    >
+                        <h3>Under construction</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
